[package]
name = "sniprun"
version = "0.3.2"
authors = ["michaelb <michael.bleuez2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
panic = "unwind"
[profile.release]
panic = "unwind"


[build-dependencies]
# tree-sitter stuff
tree-sitter = "0.17.0"
cc="*"

[dependencies]
neovim-lib="0.6.1"
log="0.4.11"
simple-logging="2.0.2"
thiserror="1.0.20"
dirs="3.0"
regex="1"
lazy_static="1.4.0"
serde_json="1.0.57"


# Python3 interpreter
unindent="0.1.6"
